Changes for 1.3:

 - fixed warning in trigger selection popup (Alexei)
 - added spec file for ZABBIX agent. Thanks to Alexey Zilber. (Alexei)
 - fixed count of problems displayin for submaps (Eugene)
 - added support of macro {TRIGGER.COMMENT} (Alexei)
 - added ZABBIX agent for Win64 platforms. (Eugene)
 - fixed incorrect disabling of actions while deleting a trigger (Alexei)
 - improved sound notification of trigger status changing (Eugene)
 - added alternative startup scripts for Fedora Linux (Alexei)
 - developed aggrigated graphs (Eugene)
 - fixed graphs drawing (Eugene)
 - fixed graph min value calculation (Eugene)
 - better pattern of distribution of item next checks to improve overall
 performance (Alexei)
 - fixed housekeeper, removal of historical and trend data (Alexei)
 - fixed caption of IT Services Availability Report (Alexei)

Changes for 1.1.1:

 - developed group functionality for graphs (Eugene)
 - developed "Copy to" functionality for trigger groups (Eugene)
 - developed "Copy to" functionality for item groups  (Eugene)
 - developed template unlinking feature (Eugene) 
 - added support of "system.swap.out" key for Linux with kernel 2.4 (Eugene)
 - added support of "system.swap.in" key for Linux with kernel 2.4 (Eugene)
 - fixed "web.page.*" keys (Eugene)
 - added startup script for Fedora Core 5. Thanks to Mark Moses. (Alexei)
 - fixed md5sum calculation (Eugene)
 - added support of LDAP services monitoring for Win32 (Eugene)
 - added support of "net.tcp.service.perf" for Win32 (Eugene)
 - added support of "net.tcp.service" for Win32 (Eugene)
 - fixed NTP protocol monitoring (Eugene)
 - new more efficient definition of function DBexecute() (Alexei)
 - new more efficient definition of function DBselect() (Alexei)
 - removed stat file using (Eugene)
 - intergeated Win32 and Linux sources of ZABBIX agent (Eugene)
 - fixed selection popup if return string contains single quote (Alexei)
 - fixed incorrect character in item key selector (Alexei)